[project]
name = "network-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2026.2.25",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyaml>=26.2.1",
    "pymongo[srv]==3.11",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "setuptools>=82.0.1",
]
